# continuous-trust

./: ContinuousTrust.md  README.md  codegen_instructions.md  gemini_results.md  main.py  pyproject.toml  run_cloud_poc.py  run_poc.py
src/: setup_gcp.sh
src/ct_agent/: agent.py  cloud_agent.py  smart_agent.py  tools.py
src/ct_core/: manifest.py  telemetry.py
src/ct_judge/: judge.py  main.py  requirements.txt
