[project]
name = "continuous-trust"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.69.0",
    "opentelemetry-api>=1.40.0",
    "opentelemetry-exporter-otlp>=1.40.0",
    "opentelemetry-instrumentation-google-genai>=0.7b0",
    "opentelemetry-sdk>=1.40.0",
    "pydantic>=2.12.5",
]
